--- a/src/scss/mod_news.scss
+++ b/src/scss/mod_news.scss
@@ -28,21 +28,25 @@
     @include devices-max-width-480px {
       margin-bottom: 40px;
     }
+
     &:hover {
-      .text_wrap{
-        top:0;
+      .text_wrap {
+        top: 0;
         opacity: .9;
       }
-      //img {
-      //  transform: scale(1.1);
-      //}
+
+      .link_wrap {
+        top: 260px;
+        left: 0;
+      }
     }
 
-    .image_wrap{
+    .image_wrap {
       width: 100%;
       height: 330px;
       overflow: hidden;
       cursor: pointer;
+
       img {
         //width: 528px;
         width: 100%;
@@ -51,13 +55,14 @@
       }
     }
 
-    .text_wrap{
+    .text_wrap {
       position: absolute;
       top: 260px;
       left: 0;
-      height: 400px;
+      height: 260px;
       background-color: #fff;
       transition: 1s;
+      overflow: hidden;
 
       .title_wrap {
         @include clear;
@@ -195,21 +200,33 @@
         p {
           font-size: 14px;
         }
-        .link_more{
-          width: 110px;
-          min-height: 30px;
-          display: flex;
-          justify-content: space-around;
-          align-items: center;
-          border-radius: .3em;
-          text-decoration: none ;
-          background-color: $color-link-base;
-          color: $color-item;
+      }
+    }
 
-          &:hover{
-            color: $color-link-active;
-            @include shadow_block;
-          }
+    .link_wrap {
+      position: absolute;
+      top: 330px;
+      left: 0;
+      @include flex-center;
+      width: 100%;
+      min-height: 70px;
+      background-color: #fff;
+      transition: 1s;
+
+      a {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 110px;
+        min-height: 30px;
+        border-radius: .3em;
+        text-decoration: none;
+        background-color: $color-link-base;
+        color: $color-item;
+
+        &:hover {
+          color: $color-link-active;
+          @include shadow_block;
         }
       }
     }
@@ -241,25 +258,33 @@
       overflow: hidden;
 
       &:hover {
-        border-bottom: 3px solid $color-base;
-        opacity: .9;
-        .wrap_text{
+        //border-bottom: 3px solid $color-base;
+        //opacity: .9;
+
+        .wrap_new_text {
           top: 0;
-          .title_new{
+
+          .title_new {
             min-height: 50px;
-            border-bottom: 3px solid $color-link-base;
+            border-bottom: 2px solid $color-link-base;
             margin-bottom: 5px;
           }
         }
+        .wrap_new_link{
+          top:260px;;
+        }
+      }
+
         //img {
         //  width: 100%;
         //  transform: scale(1.1);
         //}
       }
 
-      .wrap_new_img{
+      .wrap_new_img {
         width: 100%;
         height: 180px;
+        cursor: pointer;
 
         img {
           width: 100%;
@@ -291,12 +316,14 @@
         }
       }
 
-      .wrap_text{
+      .wrap_new_text {
         position: absolute;
         top: 180px;
         left: 0;
         background-color: $color-background-content;
         transition: 1s;
+        height: 250px;
+        overflow: hidden;
 
         .data {
           color: $color-base;
@@ -324,6 +351,37 @@
             }
           }
         }
+
+        .text_new{
+          height: 150px;
+          overflow: hidden;
+        }
+      }
+
+      .wrap_new_link{
+        position: absolute;
+        top:330px;
+        left: 0;
+        width: 100%;
+        min-height: 70px;
+        transition: 1s;
+        @include flex-center;
+
+        a {
+          display: flex;
+          justify-content: space-around;
+          align-items: center;
+          width: 110px;
+          min-height: 30px;
+          border-radius: .3em;
+          text-decoration: none;
+          background-color: $color-link-base;
+          color: $color-item;
+
+          &:hover {
+            color: $color-link-active;
+            @include shadow_block;
+          }
       }
     }
   }
