--- a/src/scss/mod_news.scss
+++ b/src/scss/mod_news.scss
@@ -24,20 +24,36 @@
     //border: 1px solid grey;
     position: relative;
     overflow: hidden;
+    margin-bottom: 10px;
 
     @include devices-max-width-480px {
-      margin-bottom: 40px;
+      height: 268px;
+      margin-bottom: 20px;
     }
 
     &:hover {
       .text_wrap {
         top: 0;
         opacity: .9;
+        @include devices-max-width-480px{
+          opacity: 1;
+        }
       }
 
       .link_wrap {
         top: 260px;
         left: 0;
+        @include devices-max-width-480px{
+          top: 210px;
+        }
+      }
+
+      .intro_new {
+        @include devices-max-width-480px {
+          display: block !important;
+          height: 170px;
+          overflow: hidden;
+        }
       }
     }
 
@@ -53,6 +69,10 @@
         //height: 100%;
         //transition: 1s;
       }
+
+      @include devices-max-width-480px{
+        height: 268px;
+      }
     }
 
     .text_wrap {
@@ -63,6 +83,11 @@
       background-color: #fff;
       transition: 1s;
       overflow: hidden;
+
+      @include devices-max-width-480px {
+        top: 168px;
+        opacity: 1;
+      }
 
       .title_wrap {
         @include clear;
@@ -270,118 +295,130 @@
             margin-bottom: 5px;
           }
         }
-        .wrap_new_link{
-          top:260px;;
+
+        .wrap_new_link {
+          top: 260px;;
         }
       }
 
-        //img {
-        //  width: 100%;
-        //  transform: scale(1.1);
-        //}
-      }
+      //img {
+      //  width: 100%;
+      //  transform: scale(1.1);
+      //}
+    }
 
-      .wrap_new_img {
+    .wrap_new_img {
+      width: 100%;
+      //height: 180px;
+      height: auto;
+      cursor: pointer;
+
+      img {
         width: 100%;
-        height: 180px;
-        cursor: pointer;
+        //height: 180px;
+        height: auto;
 
-        img {
-          width: 100%;
+        @include devices-min-width-320px {
           height: 180px;
+        }
 
-          @include devices-min-width-320px {
-            height: 180px;
-          }
+        @include devices-min-width-480px {
+          height: 268px;
+        }
 
-          @include devices-min-width-480px {
-            height: 268px;
-          }
+        @media only screen and (min-width: 600px) {
+          height: 180px;
+        }
 
-          @media only screen and (min-width: 600px) {
-            height: 180px;
-          }
+        @include devices-min-width-768px {
+          height: 240px;
+        }
 
-          @include devices-min-width-768px {
-            height: 240px;
-          }
+        @media only screen and (min-width: 800px) {
+          height: 240px;
+        }
 
-          @media only screen and (min-width: 800px) {
-            height: 240px;
-          }
-
-          @include devices-min-width-992px {
-            height: 180px;
-          }
+        @include devices-min-width-992px {
+          height: 180px;
         }
       }
+    }
 
-      .wrap_new_text {
-        position: absolute;
-        top: 180px;
-        left: 0;
-        background-color: $color-background-content;
-        transition: 1s;
-        height: 250px;
+    .wrap_new_text {
+      position: absolute;
+      top: 180px;
+      left: 0;
+      background-color: $color-background-content;
+      transition: 1s;
+      height: 250px;
+      @include devices-max-width-600px{
+        height: 275px;
+      }
+      overflow: hidden;
+
+      .data {
+        color: $color-base;
+        padding: 5px;
+        text-transform: lowercase;
+      }
+
+      .title_new {
+        padding: 5px;
+        width: 100%;
+        min-height: 120px;
         overflow: hidden;
+        transition: 1s;
 
-        .data {
-          color: $color-base;
-          padding: 5px;
-          text-transform: lowercase;
-        }
+        h3 {
+          font-size: 16px;
+          font-family: RobotoRegular;
 
-        .title_new {
-          padding: 5px;
-          width: 100%;
-          min-height: 120px;
-          overflow: hidden;
-          transition: 1s;
+          a {
+            color: $color-grey;
 
-          h3 {
-            font-size: 16px;
-            font-family: RobotoRegular;
-
-            a {
-              color: $color-grey;
-
-              &:hover {
-                color: $color-base;
-              }
+            &:hover {
+              color: $color-base;
             }
           }
         }
-
-        .text_new{
-          height: 150px;
-          overflow: hidden;
-        }
       }
 
-      .wrap_new_link{
-        position: absolute;
-        top:330px;
-        left: 0;
-        width: 100%;
-        min-height: 70px;
-        transition: 1s;
-        @include flex-center;
+      .text_new {
+        height: 150px;
+        @include devices-max-width-320px{
+          height: 150px;
+        }
+        @include devices-max-width-600px{
+          height: 180px;
+        }
+        overflow: hidden;
+      }
+    }
 
-        a {
-          display: flex;
-          justify-content: space-around;
-          align-items: center;
-          width: 110px;
-          min-height: 30px;
-          border-radius: .3em;
-          text-decoration: none;
-          background-color: $color-link-base;
-          color: $color-item;
+    .wrap_new_link {
+      position: absolute;
+      top: 330px;
+      left: 0;
+      width: 100%;
+      min-height: 70px;
+      transition: 1s;
+      @include flex-center;
 
-          &:hover {
-            color: $color-link-active;
-            @include shadow_block;
-          }
+      a {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 110px;
+        min-height: 30px;
+        border-radius: .3em;
+        text-decoration: none;
+        background-color: $color-link-base;
+        color: $color-item;
+
+        &:hover {
+          color: $color-link-active;
+          @include shadow_block;
+        }
       }
     }
   }
