--- a/src/scss/mod_puppies.scss
+++ b/src/scss/mod_puppies.scss
@@ -37,13 +37,27 @@
       padding: 10px;
       width: 100%;
       height: 450px;
-      @include devices-min-width-480px {
+      margin-bottom: 20px;
+      transition: 1s;
+
+      @include devices-max-width-480px{
         height: 550px;
       }
-      @include devices-min-width-600px {
-        height: 450px;
+      @include devices-max-width-320px{
+        height: 490px;
       }
-      margin-bottom: 10px;
+
+      &:hover{
+        @include devices-max-width-600px{
+          height: 470px;
+        }
+        @include devices-max-width-480px{
+          height: 630px;
+        }
+          @include devices-max-width-320px{
+            height: 500px;
+          }
+      }
 
       .meta_info {
         display: flex;
@@ -96,19 +110,21 @@
           top: 0;
           left: 0;
           width: 100%;
-          //height: 100%;
           border: 1px solid $color-base;
-          //border-radius: .3em;
           backface-visibility: hidden;
           height: 400px;
-          @include devices-min-width-480px {
-            height: 500px;
-          }
-          @include devices-min-width-600px {
-            height: 400px;
-          }
           overflow: hidden;
-          //text-align: center;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+
+          @include devices-max-width-480px{
+            height: 520px;
+          }
+
+          @include devices-max-width-320px{
+            height: 430px;
+          }
 
           img {
             width: 100%;
@@ -148,7 +164,7 @@
           .fields {
             display: flex;
             flex-direction: column;
-            //align-items: flex-end;
+            width: 80%;
 
             padding: 10px;
             div {
@@ -197,12 +213,18 @@
           width: 100%;
           //height: 100%;
           height: 400px;
-          @include devices-min-width-480px {
-            height: 500px;
+
+          @include devices-max-width-600px{
+            height: 450px;
           }
-          @include devices-min-width-600px {
-            height: 400px;
+          @include devices-max-width-480px{
+            height: 600px;
           }
+
+          @include devices-max-width-320px{
+            height: 450px;
+          }
+
           backface-visibility: hidden;
           overflow: hidden;
           border: 1px solid $color-base;
@@ -243,12 +265,25 @@
             //height: 195px;
             //overflow: hidden;
 
+            .nav-item{
+              .nav-link{
+                color: $color-base;
+                &:hover{
+                  background-color: $color-base;
+                  color: $color-link-active;
+                }
+              }
+            }
+
             .tab-content{
               padding: 10px;
               border: 1px solid $color-grey-light;
               border-top: none;
               height: 155px;
               overflow: hidden;
+              @include devices-max-width-600px{
+                height: 195px;
+              }
             }
           }
 
